# Specification

./: .bazelproject  .gitattributes  .gitignore  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  OpenCannabis.buf.json  OpenCannabis.buf.son  README.md  WORKSPACE  bazel-Specification  bazel-bin  bazel-out  bazel-testlogs  buf.yaml  copy.bara.sky  maven_install.json  package.json  renovate.json  repository_rules.bzl
config/: build.bzl  (+4 more)
defs/proto/: BUILD.bazel
opencannabis/: BUILD.bazel  README.md
opencannabis/accounting/: BUILD.bazel  Taxes.proto
opencannabis/base/: BUILD.bazel  Compression.proto  Language.proto  ProductKey.proto  ProductKind.proto
opencannabis/commerce/: BUILD.bazel  Currency.proto  Customer.proto  Delivery.proto  Discounts.proto  Item.proto  Order.proto  Payment.proto  Purchase.proto
opencannabis/commerce/payments/: BUILD.bazel
opencannabis/contact/: BUILD.bazel  ContactInfo.proto  EmailAddress.proto  PhoneNumber.proto  Website.proto
opencannabis/content/: BUILD.bazel  Brand.proto  Colors.proto  Content.proto  Data.proto  MaterialsData.proto  Name.proto  ProductContent.proto
opencannabis/core/: BUILD.bazel  Datamodel.proto  datamodel.proto  ocp.proto
opencannabis/crypto/: BUILD.bazel  Container.proto  Integrity.proto  Keys.proto  Signature.proto
opencannabis/crypto/primitives/: BUILD.bazel  Integrity.proto  Keys.proto
opencannabis/device/: BUILD.bazel  Device.proto
opencannabis/geo/: Address.proto  BUILD.bazel  Country.proto  Distance.proto  Geohash.proto  Location.proto  Point.proto  Province.proto  USState.proto
opencannabis/geo/usa/ca/: BUILD.bazel  CACounty.proto
opencannabis/inventory/: BUILD.bazel  InventoryLocation.proto  InventoryProduct.proto
opencannabis/inventory/rfid/: BUILD.bazel  LLRP.proto  RFID.proto
opencannabis/labtesting/: BUILD.bazel  COA.proto  Cannabinoids.proto  Terpenes.proto  TestResults.proto  TestValue.proto
opencannabis/labtesting/v1/: BUILD.bazel  labservices.api.yaml  labservices.gapic.yaml  labservices.pkg.yaml  labservices.proto  labservices_grpc_service_config.json
opencannabis/media/: BUILD.bazel  MediaItem.proto  MediaKey.proto  MediaOrientation.proto  MediaType.proto
opencannabis/oauth/: AuthorizationScope.proto  BUILD.bazel  Client.proto
opencannabis/partner/: BUILD.bazel  LocationKey.proto  PartnerKey.proto
opencannabis/person/: BUILD.bazel  Person.proto  PersonName.proto
opencannabis/products/: Apothecary.proto  BUILD.bazel  Cartridge.proto  Edible.proto  Extract.proto  Flower.proto  Merchandise.proto  Plant.proto  Preroll.proto  SKU.proto
opencannabis/products/distribution/: BUILD.bazel  DistributionChannel.proto
opencannabis/products/menu/: BUILD.bazel  Menu.proto  Section.proto
opencannabis/proximity/: BUILD.bazel  BluetoothBeacon.proto
opencannabis/regulatory/: BUILD
opencannabis/regulatory/usa/: BUILD
opencannabis/regulatory/usa/ca/: BUILD.bazel  CAAgency.proto
opencannabis/rfid/: LLRP.proto  RFID.proto
opencannabis/structs/: BUILD.bazel  Genetics.proto  Grow.proto  ProductFlags.proto  Shelf.proto  Species.proto  Version.proto
opencannabis/structs/labtesting/: BUILD.bazel  Cannabinoids.proto  Terpenes.proto  TestResults.proto  TestValue.proto
opencannabis/structs/pricing/: BUILD.bazel  PricingDescriptor.proto  SaleDescriptor.proto
opencannabis/temporal/: BUILD.bazel  Date.proto  Duration.proto  Instant.proto  Interval.proto  Schedule.proto  Time.proto  Timehash.proto
sdk/java/: BUILD.bazel  OpenCannabisSDK.java  build.sh  jarjar.config  ocp.properties  pom-template.xml  publish_cookies.sh  publish_default.sh  publish_github.sh  publish_snapshot.sh  publish_stage.sh  util.bzl
sdk/python/: .bazelproject  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE.disabled  codecov.yml  requirements.txt
sdk/python/.github/: CODEOWNERS
sdk/python/.github/workflows/: ci.yml.disabled
sdk/python/.tpl/: README.md.tpl  README_FOOTER.md.tpl  help.txt  ocp-setup.py.tpl
sdk/python/config/: build.bzl  gust.bzl  rules.bzl
sdk/python/gust/: BUILD.bazel  __init__.py  setup-gust.py
sdk/python/gust/core/: BUILD.bazel  __init__.py
sdk/python/opencannabis/: BUILD.bazel  __init__.py  __main__.py  setup.py
sdk/python/opencannabis/accounting/: BUILD.bazel  __init__.py
sdk/python/opencannabis/base/: BUILD.bazel  __init__.py
sdk/python/opencannabis/commerce/: BUILD.bazel  __init__.py
sdk/python/opencannabis/contact/: BUILD.bazel  __init__.py
sdk/python/opencannabis/content/: BUILD.bazel  __init__.py
sdk/python/opencannabis/core/: BUILD.bazel  __init__.py
sdk/python/opencannabis/crypto/: BUILD.bazel  __init__.py
sdk/python/opencannabis/device/: BUILD.bazel  __init__.py
sdk/python/opencannabis/geo/: BUILD.bazel  __init__.py
sdk/python/opencannabis/inventory/: BUILD.bazel  __init__.py
sdk/python/opencannabis/labtesting/: BUILD.bazel
sdk/python/opencannabis/media/: BUILD.bazel  __init__.py
sdk/python/opencannabis/oauth/: BUILD.bazel  __init__.py
sdk/python/opencannabis/person/: BUILD.bazel  __init__.py
sdk/python/opencannabis/products/: BUILD.bazel  __init__.py
sdk/python/opencannabis/proximity/: BUILD.bazel  __init__.py
sdk/python/opencannabis/rfid/: BUILD.bazel  __init__.py
sdk/python/opencannabis/structs/: BUILD.bazel  __init__.py
sdk/python/opencannabis/temporal/: BUILD.bazel  __init__.py
sdk/python/pytests/: BUILD.bazel
sdk/python/pytests/base/: BUILD.bazel  base_test.py
sdk/python/release-notes/: 1.0.0.md
sdk/python/tools/: ROOT_BUILD.bzl  bazel.rc
site/: .env.enc  .gitignore  BUILD.bazel  netlify.toml  next.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
site/components/: footer.js  header.js  md-content.module.css  md-content.tsx
site/docs/: BUILD.bazel  docs.ts
site/docs/architecture/: 00-intro.md  01-design.md
site/docs/reference/: BUILD.bazel  contact.md  content.md  core.md  crypto.md  device.md  geo.md  labtesting.md  partner.md  proximity.md  temporal.md
site/lib/: datocms.js
site/pages/: _app.js  _document.js  index.js
site/pages/api/: preview.js
(+102 files in other folders)
