
package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs:proto.bzl",
    "module",
)

load(
    "@rules_buf//buf:defs.bzl",
    "buf_image",
)


alias(
    name = "accounting",
    actual = "//opencannabis/accounting:opencannabis.accounting",
)

alias(
    name = "base",
    actual = "//opencannabis/base:opencannabis.base",
)

alias(
    name = "commerce",
    actual = "//opencannabis/commerce:opencannabis.commerce",
)

alias(
    name = "contact",
    actual = "//opencannabis/contact:opencannabis.contact",
)

alias(
    name = "content",
    actual = "//opencannabis/content:opencannabis.content",
)

alias(
    name = "core",
    actual = "//opencannabis/core:opencannabis.core",
)

alias(
    name = "crypto",
    actual = "//opencannabis/crypto:opencannabis.crypto",
)

alias(
    name = "device",
    actual = "//opencannabis/device:opencannabis.device",
)

alias(
    name = "geo",
    actual = "//opencannabis/geo:opencannabis.geo",
)

alias(
    name = "inventory",
    actual = "//opencannabis/inventory:opencannabis.inventory",
)

alias(
    name = "media",
    actual = "//opencannabis/media:opencannabis.media",
)

alias(
    name = "oauth",
    actual = "//opencannabis/oauth:opencannabis.oauth",
)

alias(
    name = "person",
    actual = "//opencannabis/person:opencannabis.person",
)

alias(
    name = "products",
    actual = "//opencannabis/products:opencannabis.products",
)

alias(
    name = "proximity",
    actual = "//opencannabis/proximity:opencannabis.proximity",
)

alias(
    name = "structs",
    actual = "//opencannabis/structs:opencannabis.structs",
)

alias(
    name = "temporal",
    actual = "//opencannabis/temporal:opencannabis.temporal",
)


## OpenCannabis: Models
module(
    name = "OpenCannabis",
    deps = [
        ":accounting",
        ":base",
        ":commerce",
        ":contact",
        ":content",
        ":core",
        ":crypto",
        ":device",
        ":geo",
        ":inventory",
        ":media",
        ":oauth",
        ":person",
        ":products",
        ":proximity",
        ":structs",
        ":temporal",
    ],
)


buf_image(
    name = "image_bin",
    out = "OpenCannabis.buf.bin",
    config = "//tools:buf.yaml",
    protos = [
        ":OpenCannabis",
    ],
    extra_args = [
        "--log-level=debug",
    ],
)

buf_image(
    name = "image_json",
    out = "OpenCannabis.buf.json",
    config = "//tools:buf.yaml",
    protos = [
        ":OpenCannabis",
    ],
    extra_args = [
        "--log-level=debug",
    ],
)

alias(
    name = "image",
    actual = ":image_bin",
)
