
package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs:proto.bzl",
    "module",
)

load(
    "@rules_buf//buf:defs.bzl",
    "buf_image",
)


alias(
    name = "accounting",
    actual = "//opencannabis/accounting",
)

alias(
    name = "base",
    actual = "//opencannabis/base",
)

alias(
    name = "commerce",
    actual = "//opencannabis/commerce",
)

alias(
    name = "contact",
    actual = "//opencannabis/contact",
)

alias(
    name = "content",
    actual = "//opencannabis/content",
)

alias(
    name = "core",
    actual = "//opencannabis/core",
)

alias(
    name = "crypto",
    actual = "//opencannabis/crypto",
)

alias(
    name = "device",
    actual = "//opencannabis/device",
)

alias(
    name = "geo",
    actual = "//opencannabis/geo",
)

alias(
    name = "inventory",
    actual = "//opencannabis/inventory",
)

alias(
    name = "media",
    actual = "//opencannabis/media",
)

alias(
    name = "oauth",
    actual = "//opencannabis/oauth",
)

alias(
    name = "partner",
    actual = "//opencannabis/partner",
)

alias(
    name = "person",
    actual = "//opencannabis/person",
)

alias(
    name = "products",
    actual = "//opencannabis/products",
)

alias(
    name = "proximity",
    actual = "//opencannabis/proximity",
)

alias(
    name = "structs",
    actual = "//opencannabis/structs",
)

alias(
    name = "temporal",
    actual = "//opencannabis/temporal",
)


## OpenCannabis: Models
module(
    name = "OpenCannabis",
    deps = [
        ":accounting",
        ":base",
        ":commerce",
        ":contact",
        ":content",
        ":core",
        ":crypto",
        ":device",
        ":geo",
        ":inventory",
        ":media",
        ":oauth",
        ":partner",
        ":person",
        ":products",
        ":proximity",
        ":structs",
        ":temporal",
    ],
)

alias(
    name = "library",
    actual = ":OpenCannabis",
)


buf_image(
    name = "image_bin",
    out = "OpenCannabis.buf.bin",
    config = "//tools:buf.yaml",
    protos = [
        ":OpenCannabis",
    ],
    extra_args = [
        "--log-level=debug",
    ],
)

buf_image(
    name = "image_json",
    out = "OpenCannabis.buf.json",
    config = "//tools:buf.yaml",
    protos = [
        ":OpenCannabis",
    ],
    extra_args = [
        "--log-level=debug",
    ],
)

alias(
    name = "image",
    actual = ":image_bin",
)
