
package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs:proto.bzl",
    "module",
)

load(
    "@rules_buf//buf:defs.bzl",
    "buf_image",
)

load(
    "@bazel_tools//tools/build_defs/pkg:pkg.bzl",
    "pkg_tar",
)


MODULES = [
    "accounting",
    "base",
    "commerce",
    "contact",
    "content",
    "core",
    "crypto",
    "device",
    "geo",
    "inventory",
    "labtesting",
    "media",
    "oauth",
    "partner",
    "person",
    "products",
    "proximity",
    "rfid",
    "structs",
    "temporal",
]

DOC_SKIP = [
    "inventory",
    "products",
]


[
    alias(
        name = n,
        actual = "//opencannabis/%s" % n,
    ) for n in MODULES
]


## OpenCannabis: Models
module(
    name = "OpenCannabis",
    deps = [":%s" % n for n in MODULES],
)

alias(
    name = "opencannabis",
    actual = ":OpenCannabis",
)

alias(
    name = "library",
    actual = ":OpenCannabis",
)

pkg_tar(
    name = "docs",
    srcs = ["//opencannabis/%s:%s-doc" % (n, n) for n in MODULES if n not in DOC_SKIP],
)

buf_image(
    name = "image_bin",
    out = "OpenCannabis.buf.bin",
    config = "//:buf.yaml",
    protos = [
        ":OpenCannabis",
    ],
)

buf_image(
    name = "image_json",
    out = "OpenCannabis.buf.json",
    config = "//:buf.yaml",
    protos = [
        ":OpenCannabis",
    ],
    extra_args = [
        "--log-level=debug",
    ],
)

alias(
    name = "image",
    actual = ":image_bin",
)
