
package(default_visibility = ["//visibility:public"])
load("//tools/defs:proto.bzl", "proto", "module")


## Accounting
proto(
    name = "Taxes",
    srcs = ["Taxes.proto"],
    deps = [
        "//opencannabis/geo:Province",
        "//opencannabis/geo:Country",
    ],
)


module(
    name = "accounting",
    deps = [
        ":Taxes",
    ],
)
