
package(default_visibility = ["//visibility:public"])
load("//tools/defs:proto.bzl", "proto", "module")


## Base
proto(
    name = "Compression",
    srcs = ["Compression.proto"],
)

proto(
    name = "Language",
    srcs = ["Language.proto"],
)

proto(
    name = "ProductKind",
    srcs = ["ProductKind.proto"],
    deps = [
        "//opencannabis/core:OCP",
    ],
)

proto(
    name = "ProductKey",
    srcs = ["ProductKey.proto"],
    deps = [
        ":ProductKind",
        "//opencannabis/content:Name",
        "//opencannabis/core:Datamodel",
        "//opencannabis/core:OCP"
    ],
)


module(
    name = "base",
    deps = [
        ":Compression",
        ":Language",
        ":ProductKey",
        ":ProductKind"
    ],
)
