
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Commerce
proto(
    name = "Currency",
    srcs = ["Currency.proto"],
)

proto(
    name = "Customer",
    srcs = ["Customer.proto"],
    deps = [
        "//opencannabis/person:Person",
        "@gust//gust/core:datamodel"],
)

proto(
    name = "Delivery",
    srcs = ["Delivery.proto"],
    deps = [
        "//opencannabis/geo:Address",
        "@gust//gust/core:datamodel"],
)

proto(
    name = "Discounts",
    srcs = ["Discounts.proto"],
    deps = ["//opencannabis/temporal:Instant"],
)

proto(
    name = "Item",
    srcs = ["Item.proto"],
    deps = [
        "//opencannabis/base:ProductKey",
        "//opencannabis/structs/pricing:PricingDescriptor"],
)

proto(
    name = "Order",
    srcs = ["Order.proto"],
    deps = [
        ":Item",
        ":Delivery",
        ":Customer",
        "//opencannabis/commerce/payments:Payment",
        "//opencannabis/temporal:Instant",
        "@gust//gust/core:datamodel"],
)

proto(
    name = "Purchase",
    srcs = ["Purchase.proto"],
    deps = [
        ":Item",
        ":Currency",
        ":Discounts",
        "@gust//gust/core:datamodel",
        "//opencannabis/accounting:Taxes",
        "//opencannabis/crypto:Signature",
        "//opencannabis/commerce/payments:Payment",
        "//opencannabis/inventory:InventoryProduct",
        "//opencannabis/temporal:Instant"],
)


module(
    name = "opencannabis.commerce",
    deps = [
        ":Currency",
        ":Customer",
        ":Delivery",
        ":Discounts",
        ":Item",
        ":Order",
        ":Purchase",
        "//opencannabis/commerce/payments:opencannabis.commerce.payments"],
)
