
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Partner
proto(
    name = "EmailAddress",
    srcs = ["EmailAddress.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "PhoneNumber",
    srcs = ["PhoneNumber.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "Website",
    srcs = ["Website.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "ContactInfo",
    srcs = ["ContactInfo.proto"],
    deps = [
        ":PhoneNumber",
        ":EmailAddress",
        ":Website",
        "//opencannabis/geo:Location",
        "@gust//gust/core:datamodel"],
)


module(
    name = "opencannabis.contact",
    deps = [
        ":EmailAddress",
        ":PhoneNumber",
        ":Website",
        ":ContactInfo"],
)
