
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Core
proto(
    name = "Datamodel",
    srcs = ["datamodel.proto"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)


## OpenCannabis Annotations
proto(
    name = "Datamodel",
    srcs = ["ocp.proto"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)


module(
    name = "opencannabis.core",
    deps = [":Datamodel"],
)
