
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Core
proto(
    name = "Datamodel",
    srcs = ["datamodel.proto"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)


## OpenCannabis Annotations
proto(
    name = "OCP",
    srcs = ["ocp.proto"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)


module(
    name = "core",
    deps = [":Datamodel"],
)
