
package(default_visibility = ["//visibility:public"])
load("//tools/defs:proto.bzl", "proto", "module")


# Cryptographic Primitives
proto(
    name = "Integrity",
    srcs = ["Integrity.proto"],
)

proto(
    name = "Keys",
    srcs = ["Keys.proto"],
    deps = [":Integrity"],
)


# Cryptography
proto(
    name = "Signature",
    srcs = ["Signature.proto"],
    deps = [
        ":Keys",
        ":Integrity",
    ],
)

proto(
    name = "Container",
    srcs = ["Container.proto"],
    deps = [
        "//opencannabis/base:Compression",
        "//opencannabis/content:Content",
        ":Keys",
        ":Integrity",
    ],
)


module(
    name = "crypto",
    deps = [
        ":Container",
        ":Integrity",
        ":Keys",
        ":Signature",
    ],
)
