
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Geography
proto(
    name = "Address",
    srcs = ["Address.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "Country",
    srcs = ["Country.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "Distance",
    srcs = ["Distance.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "Geohash",
    srcs = ["Geohash.proto"],
    deps = [
        ":Distance",
        "@gust//gust/core:datamodel"],
)

proto(
    name = "Point",
    srcs = ["Point.proto"],
    deps = [
        ":Distance",
        "@gust//gust/core:datamodel"],
)

proto(
    name = "Location",
    srcs = ["Location.proto"],
    deps = [
        ":Address",
        ":Point",
        ":Distance",
        "//opencannabis/content:Name",
        "@gust//gust/core:datamodel"],
)

proto(
    name = "USState",
    srcs = ["USState.proto"],
)

proto(
    name = "Province",
    srcs = ["Province.proto"],
    deps = [":USState"],
)


module(
    name = "opencannabis.geo",
    deps = [
        ":Address",
        ":Country",
        ":Distance",
        ":Geohash",
        ":Point",
        ":Location",
        ":USState",
        ":Province",
        "//opencannabis/geo/usa/ca:opencannabis.geo.usa.ca"],
)
