
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Media
proto(
    name = "MediaOrientation",
    srcs = ["MediaOrientation.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "MediaType",
    srcs = ["MediaType.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "MediaKey",
    srcs = ["MediaKey.proto"],
    deps = [
        ":MediaType",
        "@gust//gust/core:datamodel"],
)

proto(
    name = "MediaItem",
    srcs = ["MediaItem.proto"],
    deps = [
        ":MediaKey",
        ":MediaType",
        "//opencannabis/base:ProductKey",
        "//opencannabis/temporal:Instant",
        "@gust//gust/core:datamodel"],
)


module(
    name = "opencannabis.media",
    deps = [
        ":MediaOrientation",
        ":MediaType",
        ":MediaKey",
        ":MediaItem"],
)
