
package(default_visibility = ["//visibility:public"])
load("//tools/defs:proto.bzl", "proto", "module")


## Media
proto(
    name = "MediaOrientation",
    srcs = ["MediaOrientation.proto"],
    deps = ["//opencannabis/core:Datamodel"],
)

proto(
    name = "MediaType",
    srcs = ["MediaType.proto"],
    deps = [
        "//opencannabis/core:Datamodel",
        "//opencannabis/core:OCP",
    ],
)

proto(
    name = "MediaKey",
    srcs = ["MediaKey.proto"],
    deps = [
        ":MediaType",
        "//opencannabis/core:Datamodel",
        "//opencannabis/core:OCP",
    ],
)

proto(
    name = "MediaItem",
    srcs = ["MediaItem.proto"],
    deps = [
        ":MediaKey",
        ":MediaType",
        "//opencannabis/base:ProductKey",
        "//opencannabis/temporal:Instant",
        "//opencannabis/core:Datamodel",
        "//opencannabis/core:OCP",
    ],
)


module(
    name = "media",
    deps = [
        ":MediaOrientation",
        ":MediaType",
        ":MediaKey",
        ":MediaItem",
    ],
)
