
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Person
proto(
    name = "PersonName",
    srcs = ["PersonName.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "Person",
    srcs = ["Person.proto"],
    deps = [
        ":PersonName",
        "//opencannabis/contact:ContactInfo",
        "//opencannabis/temporal:Date",
        "@gust//gust/core:datamodel"],
)


module(
    name = "opencannabis.person",
    deps = [
        ":PersonName",
        ":Person"],
)
