
package(default_visibility = ["//visibility:public"])
load("//tools/defs:proto.bzl", "proto", "module")


# Products
proto(
    name = "Apothecary",
    srcs = ["Apothecary.proto"],
)

proto(
    name = "Cartridge",
    srcs = ["Cartridge.proto"],
)

proto(
    name = "Edible",
    srcs = ["Edible.proto"],
)

proto(
    name = "Extract",
    srcs = ["Extract.proto"],
    deps = [
        "//opencannabis/base:ProductKey",
    ],
)

proto(
    name = "Flower",
    srcs = ["Flower.proto"],
    deps = [
        "//opencannabis/core:Datamodel",
        "//opencannabis/base:ProductKey",
    ],
)

proto(
    name = "Merchandise",
    srcs = ["Merchandise.proto"],
)

proto(
    name = "Plant",
    srcs = ["Plant.proto"],
    deps = [
        "//opencannabis/base:ProductKey",
    ],
)

proto(
    name = "Preroll",
    srcs = ["Preroll.proto"],
    deps = [
        "//opencannabis/base:ProductKey",
    ],
)

proto(
    name = "SKU",
    srcs = ["SKU.proto"],
    deps = [
        "//opencannabis/commerce:Item",
        "//opencannabis/core:Datamodel",
    ],
)


module(
    name = "products",
    deps = [
        ":Apothecary",
        ":Cartridge",
        ":Edible",
        ":Extract",
        ":Flower",
        ":Merchandise",
        ":Plant",
        ":Preroll",
        ":SKU",
        "//opencannabis/products/distribution",
        "//opencannabis/products/menu",
    ],
)
