
package(default_visibility = ["//visibility:public"])
load("//tools/defs:proto.bzl", "proto", "module")


# Proximity
proto(
    name = "BluetoothBeacon",
    srcs = ["BluetoothBeacon.proto"],
    deps = [
        "//opencannabis/geo:Location",
        "//opencannabis/geo:Distance",
        "//opencannabis/temporal:Instant",
    ],
)


module(
    name = "proximity",
    deps = [":BluetoothBeacon"],
)
