
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Temporal
proto(
    name = "Date",
    srcs = ["Date.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "Duration",
    srcs = ["Duration.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "Instant",
    srcs = ["Instant.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "Interval",
    srcs = ["Interval.proto"],
    deps = ["@gust//gust/core:datamodel"],
)

proto(
    name = "Time",
    srcs = ["Time.proto"],
)

proto(
    name = "Schedule",
    srcs = ["Schedule.proto"],
    deps = [
        ":Time",
        ":Instant",
        ":Interval",
        "@gust//gust/core:datamodel"],
)

proto(
    name = "Timehash",
    srcs = ["Timehash.proto"],
    deps = ["@gust//gust/core:datamodel"],
)


module(
    name = "opencannabis.temporal",
    deps = [
        ":Date",
        ":Duration",
        ":Instant",
        ":Interval",
        ":Time",
        ":Schedule",
        ":Timehash"],
)
